objects/vlocity_ins__Policy__c.object
<CustomObject>
    <description>DEPRECATED. Replaced by Asset. Insurance policies, annuities or other insurance products held by the carrier or agency using Vlocity Insurance. Can also track enrollments of consumer clients in a benefit or retirement plan. Master-detail child object of Account.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <description>ID of the account who is considered the primary policyholder for this policy. Visibility of this policy is defined by the visibility of this primary policyholder account.</description>
        <label>Policyholder</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>StandardAccount</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policy1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AccumulationValue__c</fullName>
        <description>The current accumulated cash value of this insurance policy.</description>
        <label>Accumulation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyCommission__c</fullName>
        <description>When the deploying company is an agency, this field can be used to track the commission earned by the agency for this policy.</description>
        <label>Agency Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualPremium__c</fullName>
        <description>The amount that must be paid each year in order to keep the insurance policy active.</description>
        <label>Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationSubmitDate__c</fullName>
        <description>The date the application was originally submitted to the carrier for the current policy.</description>
        <label>Application Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutomaticRebalancing__c</fullName>
        <description>For annuities or investment accounts, whether automatic rebalancing of the holdings to match a target asset allocation is elected or not elected.</description>
        <label>Automatic Rebalancing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elected</fullName>
                </value>
                <value>
                    <fullName>Not Elected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BenefitPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When the policy record captures an employee&apos;s enrollment in a group benefit plan, this field identifies the benefit plan in which the employee is enrolled.</description>
        <label>Plan</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingMethod__c</fullName>
        <description>Method of billing such as direct bill, payroll deduction, billing account or agent collect.</description>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Collect</fullName>
                </value>
                <value>
                    <fullName>Billing Account</fullName>
                </value>
                <value>
                    <fullName>Direct Bill</fullName>
                </value>
                <value>
                    <fullName>Payroll Deduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CashSurrenderValue__c</fullName>
        <description>The amount of money that will be paid to the owner of an insurance policy after surrender penalties if the policy is voluntarily surrendered prior to the event that is insured. Cash surrender value mostly applies to life insurance policies, specifically whole life insurance policies.</description>
        <label>Cash Surrender Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CashValue__c</fullName>
        <description>The current accumulated cash value of this policy.</description>
        <label>Cash Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractDeathBenefit__c</fullName>
        <description>Type of contract death benefit such as cost of living death benefit, enhanced death benefit, escalating death benefit or standard death benefit.</description>
        <label>Contract Death Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COL Death Benefit</fullName>
                </value>
                <value>
                    <fullName>Enhanced Death Benefit</fullName>
                </value>
                <value>
                    <fullName>Escalating Death Benefit</fullName>
                </value>
                <value>
                    <fullName>Standard Death Benefit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractLivingBenefit__c</fullName>
        <description>Type of contract living benefit such as cost of living increase benefit, minimum guaranteed income, quarterly ratchet or standard benefit.</description>
        <label>Contract Living Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COL Increase Benefit</fullName>
                </value>
                <value>
                    <fullName>Minimum Guaranteed Income</fullName>
                </value>
                <value>
                    <fullName>Quaterly Ratchet</fullName>
                </value>
                <value>
                    <fullName>Standard Benefit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CostBasis__c</fullName>
        <description>The amount that is subtracted from proceeds to determine gain for income tax purposes.</description>
        <label>Cost Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DaysToExpire__c</fullName>
        <description>Formula: Number of days till the expiration date.</description>
        <formula>vlocity_ins__ExpirationDate__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeathBenefit__c</fullName>
        <description>The amount on a life insurance policy, annuity or pension that is payable to the beneficiary when the insured or annuitant passes away.</description>
        <label>Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <description>The beginning of the most recent term for this policy. This defines when the responsibilities of, and benefits to, all parties kick in for the most recent term. For policies subject to periodic renewal, the effective date reflects the most recent renewal.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveTerm__c</fullName>
        <description>Formula: [effective date] - [expiration date]. Textual description of the effective term, for example, 12/10/2014-12/10/2020.</description>
        <formula>TEXT(vlocity_ins__EffectiveDate__c) &amp;&apos; - &apos;&amp; TEXT(vlocity_ins__ExpirationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationDate__c</fullName>
        <description>The scheduled termination date for the current term of the insurance policy, at which coverage ends if not renewed.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FaceAmount__c</fullName>
        <description>The sum of money for which an insurance cover is obtained, usually shown on the top sheet (face) of the policy. In life insurance, the sum paid on the policy&apos;s maturity date, on the death of the insured or on some other contracted term.</description>
        <label>Face Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GuaranteePeriod__c</fullName>
        <description>Text description of the guarantee period.</description>
        <label>Guarantee Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GuaranteedDeathBenefit__c</fullName>
        <description>For annuities, the amount of benefit guaranteed to be paid to beneficiaries upon the death of the annuitant.</description>
        <label>Guaranteed Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InceptionDate__c</fullName>
        <description>The date when the policy was first issued, which defines the actual date when policy coverages went into effect. Before the date of inception, the policyholder does not have coverage.</description>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InitialDeposit__c</fullName>
        <description>The amount initially deposited in the annuity or policy.</description>
        <label>Initial Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsurerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The carrier or writing company that offers and/or underwrites the insurance policy.</description>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Carrier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policies (Insurer)</relationshipLabel>
        <relationshipName>Policies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LOBDeveloperName__c</fullName>
        <description>Formula: the developer name of record type.</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineofBusiness__c</fullName>
        <description>Formula: the label of the record type. Assumes record types are defined based on lines of business such as personal lines, commercial lines, individual life or individual annuity.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpenClaimCount__c</fullName>
        <description>Number of currently open claims against this policy.</description>
        <label>Open Claim Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The policy&apos;s parent policy.</description>
        <label>Parent Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyJurisdiction__c</fullName>
        <description>The jurisdiction which governs and authorizes this policy.</description>
        <label>Policy Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyStatus__c</fullName>
        <description>The status of this policy such as active, inactive, expired, or pending.</description>
        <label>Policy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyType__c</fullName>
        <description>The type of policy such as term life, auto, homeowners or variable annuity. More detailed than the line of business.</description>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Boatowners</fullName>
                </value>
                <value>
                    <fullName>Business Owners</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>D&amp;O</fullName>
                </value>
                <value>
                    <fullName>Equity−indexed annuity</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Homeowners</fullName>
                </value>
                <value>
                    <fullName>Inland Marine</fullName>
                </value>
                <value>
                    <fullName>Ocean Marine</fullName>
                </value>
                <value>
                    <fullName>Permanent Life</fullName>
                </value>
                <value>
                    <fullName>Pers/Scheduled Property</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Renters</fullName>
                </value>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Umbrella Liability</fullName>
                </value>
                <value>
                    <fullName>Unit Linked Life</fullName>
                </value>
                <value>
                    <fullName>Universal Life</fullName>
                </value>
                <value>
                    <fullName>Universal Variable Life</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Variable Life</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryBrokerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary agent, broker or advisor who produced, or sold, this policy.</description>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Optional) ID of the product which represents the insurance product which is this policy.</description>
        <label>Product Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Policies</relationshipLabel>
        <relationshipName>Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QualifiedType__c</fullName>
        <description>For annuities, identifies whether this annuity is &quot;qualified&quot; or &quot;non-qualified&quot; for income tax purposes.</description>
        <label>Qualified Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatePlan__c</fullName>
        <description>Rate plan description.</description>
        <label>Rate Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateState__c</fullName>
        <description>The state or other jurisdiction governing the rating of this policy.</description>
        <label>Rate State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReportGroup__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReportInsurerId__c</fullName>
        <formula>vlocity_ins__InsurerId__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportInsurer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceOfFunds__c</fullName>
        <description>For annuities, a description of the source of funds.</description>
        <label>Source of Funds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <description>The term for this policy such as annual, quarterly, multi-year or no term.</description>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6 Month</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Multi-Year</fullName>
                </value>
                <value>
                    <fullName>No Term</fullName>
                </value>
                <value>
                    <fullName>Quaterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumForTerm__c</fullName>
        <description>The total amount of premium that will be collected for this policy over the full term.</description>
        <label>Total Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitofFaceAmount__c</fullName>
        <description>For annuities, unit of face amount.</description>
        <label>Unit of Face Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValuePerUnit__c</fullName>
        <description>For annuities, currency value per unit of face amount.</description>
        <label>Value Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Policy</label>
    <listViews>
        <fullName>vlocity_ins__ActivePolicies</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__LineofBusiness__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>vlocity_ins__PolicyStatus__c</columns>
        <columns>vlocity_ins__ExpirationDate__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Policies</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__LineofBusiness__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>vlocity_ins__PolicyStatus__c</columns>
        <columns>vlocity_ins__ExpirationDate__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__CommercialLines</fullName>
        <columns>vlocity_ins__DaysToExpire__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__AgencyCommission__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <columns>vlocity_ins__InsurerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__Policy__c.vlocity_ins__CommercialLines</value>
        </filters>
        <label>Commercial Lines</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__IndividualAnnuities</fullName>
        <columns>vlocity_ins__DaysToExpire__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__AgencyCommission__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <columns>vlocity_ins__InsurerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__Policy__c.vlocity_ins__IndividualAnnuity</value>
        </filters>
        <label>Individual Annuities</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__IndividualLife</fullName>
        <columns>vlocity_ins__DaysToExpire__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__AgencyCommission__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <columns>vlocity_ins__InsurerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__Policy__c.vlocity_ins__IndividualLife</value>
        </filters>
        <label>Individual Life</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__PersonalLines</fullName>
        <columns>vlocity_ins__DaysToExpire__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__AgencyCommission__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <columns>vlocity_ins__InsurerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__Policy__c.vlocity_ins__PersonalLines</value>
        </filters>
        <label>Personal Lines</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__X90DaysToRenewal</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>vlocity_ins__DaysToExpire__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_ins__AccountId__c</columns>
        <columns>vlocity_ins__LineofBusiness__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>vlocity_ins__AnnualPremium__c</columns>
        <columns>vlocity_ins__AgencyCommission__c</columns>
        <columns>vlocity_ins__InsurerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__DaysToExpire__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>vlocity_ins__DaysToExpire__c</field>
            <operation>lessOrEqual</operation>
            <value>90</value>
        </filters>
        <label>90 Days to Renewal</label>
    </listViews>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__CommercialLines</fullName>
        <active>true</active>
        <description>Record type for Commercial Lines LOB Policy</description>
        <label>Commercial Lines</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__IndividualAnnuity</fullName>
        <active>true</active>
        <description>Record type for Individual Annuity LOB Policy</description>
        <label>Individual Annuity</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__IndividualLife</fullName>
        <active>true</active>
        <description>Record type for Individual Life LOB Policy</description>
        <label>Individual Life</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MobilePhonePolicy</fullName>
        <active>false</active>
        <label>MobilePhonePolicy</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__PersonalLines</fullName>
        <active>true</active>
        <description>Record type for Personal Lines LOB Policy</description>
        <label>Personal Lines</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>